--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,278 +1,359 @@
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
+@import url("https://fonts.googleapis.com/css?family=VT323");
+@import url("https://fonts.googleapis.com/css?family=Open Sans");
+@import url("https://fonts.googleapis.com/css?family=Share Tech Mono");
+@import url("https://fonts.googleapis.com/css?family=Teko:700");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700");
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
 
-html {
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+nav {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  z-index: 1;
+  border: 2px solid #222; }
+  nav a {
+    margin: 0 5px;
     color: #222;
-    font-size: 1em;
-    line-height: 1.4;
-}
+    transition: .2s ease-out; }
+    nav a:hover {
+      color: #111111;
+      text-decoration: none; }
 
-/*
- * Remove text-shadow in selection highlight:
- * https://twitter.com/miketaylr/status/12228805301
- *
- * Vendor-prefixed and regular ::selection selectors cannot be combined:
- * https://stackoverflow.com/a/16982510/7133471
- *
- * Customize the background color to match your design.
- */
+body, html {
+  overflow: hidden;
+  font-family: 'Montserrat';
+  font-size: 1em; }
 
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
+@keyframes swap {
+  0% {
+    transform: rotateY(0deg); }
+  100% {
+    transform: rotateY(180deg); } }
+@keyframes glitch {
+  0% {
+    transform: translate(0); }
+  20% {
+    transform: translate(-2px, 2px); }
+  40% {
+    transform: translate(-2px, -2px); }
+  60% {
+    transform: translate(2px, 2px); }
+  80% {
+    transform: translate(2px, -2px); }
+  to {
+    transform: translate(0); } }
+section {
+  height: 100vh;
+  width: 100vw;
+  position: relative; }
 
-/*
- * A better looking default horizontal rule
- */
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+  height: 100%;
+  width: 100%; }
 
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
+.puzzle_container {
+  transition: 340ms transform cubic-bezier(0.7, 0.3, 0, 1), 340ms -webkit-transform cubic-bezier(0.7, 0.3, 0, 1);
+  will-change: transform;
+  display: flex;
+  height: 300%;
+  flex-direction: column; }
 
-/*
- * Remove the gap between audio, canvas, iframes,
- * images, videos and the bottom of their containers:
- * https://github.com/h5bp/html5-boilerplate/issues/440
- */
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s; }
 
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
+.fade-enter, .fade-leave-to {
+  opacity: 0; }
 
-/*
- * Remove default fieldset styles.
- */
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-/*
- * Allow only vertical resizing of textareas.
- */
-
-textarea {
-    resize: vertical;
-}
-
-/* ==========================================================================
-   Browser Upgrade Prompt
-   ========================================================================== */
-
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-
-/*
- * Hide visually and from screen readers
- */
-
-.hidden {
-    display: none !important;
-}
-
-/*
- * Hide only visually, but have it available for screen readers:
- * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
- *
- * 1. For long content, line feeds are not interpreted as spaces and small width
- *    causes content to wrap 1 word per line:
- *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
- */
-
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
+.intro_btn_container {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  cursor: pointer;
+  transform: translateX(-50%) rotate(-45deg);
+  left: 50%;
+  bottom: 50px;
+  transition: .2s ease-out; }
+  .intro_btn_container .intro_btn {
+    background: transparent;
+    width: 100%;
+    pointer-events: none;
     position: absolute;
-    width: 1px;
-    white-space: nowrap; /* 1 */
-}
+    transition: .2s ease-out;
+    box-sizing: border-box;
+    height: 100%;
+    border: 3px solid #222;
+    perspective: 1000px;
+    transform-origin: 100% 100%; }
+    .intro_btn_container .intro_btn:last-of-type {
+      background: black;
+      transform-origin: 100% 100%;
+      transform: translate(-100%, 0%) rotateZ(180deg); }
+      .intro_btn_container .intro_btn:last-of-type .line {
+        background: white; }
+    .intro_btn_container .intro_btn .line {
+      position: absolute;
+      left: 10px;
+      bottom: 10px;
+      width: 50%;
+      height: 3px;
+      background: #222; }
+      .intro_btn_container .intro_btn .line:last-of-type {
+        height: 50%;
+        width: 3px;
+        bottom: 10px;
+        left: 10px; }
+  .intro_btn_container:hover {
+    transform: translateX(-50%) rotateZ(135deg); }
+    .intro_btn_container:hover .intro_btn {
+      transform: rotateZ(-90deg); }
+      .intro_btn_container:hover .intro_btn:last-of-type {
+        transform: translate(-100%, 0%) rotateZ(90deg); }
 
-/*
- * Extends the .visuallyhidden class to allow the element
- * to be focusable when navigated to via the keyboard:
- * https://www.drupal.org/node/897638
- */
+#intro {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+  animation: gradient 3s ease-in-out infinite alternate; }
+  #intro .text_note {
+    font-size: 2.42em;
+    max-width: 1280px;
+    position: relative;
+    text-align: center;
+    color: #222;
+    font-weight: 400; }
+    #intro .text_note:before, #intro .text_note:after {
+      position: absolute;
+      content: attr(data-note);
+      opacity: .25;
+      top: 0;
+      left: 0;
+      color: #00f;
+      z-index: -2;
+      transform: translate(2.5px, 2.5px); }
+    #intro .text_note:before {
+      transform: translate(-2.7px, -2.1px);
+      z-index: -3;
+      color: #52fc59; }
+  #intro #text_container {
+    display: flex;
+    height: 110px;
+    position: relative;
+    font-weight: 300;
+    font-size: 4.2em;
+    justify-content: center;
+    padding-bottom: 20px; }
+    #intro #text_container .text_loader {
+      position: absolute;
+      bottom: .5rem;
+      width: 0;
+      left: 50%;
+      transform: translateX(-48%);
+      height: 3px;
+      transition: 230ms width cubic-bezier(0.75, 0, 0, 1);
+      background: #222222; }
+    #intro #text_container .letter_container {
+      position: relative;
+      margin: 0 5px;
+      width: 50px; }
+      #intro #text_container .letter_container p {
+        height: 100%;
+        margin: 0;
+        text-align: center;
+        width: 50px;
+        position: absolute;
+        color: #404040;
+        box-sizing: border-box; }
+        #intro #text_container .letter_container p:first-of-type {
+          transform: translate(-10px, 5px);
+          z-index: 5; }
+        #intro #text_container .letter_container p:nth-of-type(2) {
+          transform: translate(-15px, 7.25px);
+          z-index: 4;
+          opacity: .75; }
+        #intro #text_container .letter_container p:nth-of-type(3) {
+          transform: translate(-15px, 7.25px);
+          z-index: 3;
+          opacity: .75; }
+        #intro #text_container .letter_container p:last-of-type {
+          transform: translate(-17px, 9px);
+          z-index: 2;
+          opacity: .75; }
+        #intro #text_container .letter_container p.matched {
+          color: #404040;
+          background: transparent;
+          animation: none; }
 
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
-    white-space: inherit;
-}
+#projects {
+  background: white; }
+  #projects .project-wrapper {
+    position: relative;
+    top: 10vh;
+    max-height: 80vh;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: stretch; }
+    #projects .project-wrapper .project-container {
+      padding: 10px;
+      flex-basis: 33.3%;
+      opacity: 1;
+      box-sizing: border-box;
+      transition-delay: 0ms !important;
+      will-change: transform, opacity, width, height;
+      transition: width 340ms cubic-bezier(0.62, 0.02, 0.34, 1), height 340ms cubic-bezier(0.62, 0.02, 0.34, 1), transform 340ms cubic-bezier(0.62, 0.02, 0.34, 1), left 340ms cubic-bezier(0.62, 0.02, 0.34, 1), top 340ms cubic-bezier(0.62, 0.02, 0.34, 1); }
+      #projects .project-wrapper .project-container .project-box {
+        background: white url("https://picsum.photos/410/375") no-repeat top left 0;
+        cursor: pointer;
+        position: relative;
+        width: 100%;
+        background-size: auto;
+        border: 1px solid #ececec;
+        border-radius: 0;
+        box-shadow: 0px 0px 20px -5px rgba(27, 94, 119, 0.15);
+        height: 100%;
+        transition: box-shadow 200ms ease-out; }
+        #projects .project-wrapper .project-container .project-box .project-hover {
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          box-sizing: border-box;
+          opacity: 0;
+          padding: 25px;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+          transition: 250ms ease-out; }
+          #projects .project-wrapper .project-container .project-box .project-hover h5 {
+            font-weight: 400;
+            color: #222;
+            font-size: 1.5em;
+            margin: 0;
+            text-align: center; }
+          #projects .project-wrapper .project-container .project-box .project-hover .btn {
+            padding: 5px 10px;
+            text-align: center;
+            text-transform: uppercase;
+            letter-spacing: .6em;
+            font-size: .85em;
+            position: relative;
+            width: 160px;
+            transition: .2s ease-out; }
+            #projects .project-wrapper .project-container .project-box .project-hover .btn p:first-child {
+              opacity: 0; }
+            #projects .project-wrapper .project-container .project-box .project-hover .btn p:not(:first-child) {
+              position: absolute;
+              top: calc(50% - 15px);
+              left: 50%;
+              transform: translate(-50%, -50%); }
+            #projects .project-wrapper .project-container .project-box .project-hover .btn:after {
+              position: absolute;
+              left: 0;
+              top: 0;
+              width: 100%;
+              height: 100%;
+              content: '';
+              border: 1px solid #222;
+              transition: inherit; }
+            #projects .project-wrapper .project-container .project-box .project-hover .btn:hover {
+              letter-spacing: .8em; }
+              #projects .project-wrapper .project-container .project-box .project-hover .btn:hover:after {
+                transform: scale(1.25); }
+            #projects .project-wrapper .project-container .project-box .project-hover .btn.expanded {
+              letter-spacing: .8em; }
+              #projects .project-wrapper .project-container .project-box .project-hover .btn.expanded:after {
+                transform: scale(1.25); }
+              #projects .project-wrapper .project-container .project-box .project-hover .btn.expanded:hover {
+                letter-spacing: .6em; }
+                #projects .project-wrapper .project-container .project-box .project-hover .btn.expanded:hover:after {
+                  transform: scale(1); }
+        #projects .project-wrapper .project-container .project-box:hover {
+          box-shadow: 0px 0px 15px -5px #bbbbbb; }
+          #projects .project-wrapper .project-container .project-box:hover .project-hover {
+            opacity: 1; }
+      #projects .project-wrapper .project-container:first-of-type {
+        transition-delay: 450ms; }
+      #projects .project-wrapper .project-container:nth-of-type(2) {
+        transition-delay: 400ms; }
+      #projects .project-wrapper .project-container:nth-of-type(3) {
+        transition-delay: 250ms; }
+      #projects .project-wrapper .project-container:nth-of-type(4) {
+        transition-delay: 250ms; }
+      #projects .project-wrapper .project-container:nth-of-type(5) {
+        transition-delay: 400ms; }
+      #projects .project-wrapper .project-container:nth-of-type(6) {
+        transition-delay: 450ms; }
+      #projects .project-wrapper .project-container.active {
+        width: 100%;
+        height: 100%;
+        opacity: 1;
+        z-index: 1;
+        max-width: 100%; }
+      #projects .project-wrapper .project-container.transformDown {
+        transform: translateY(100%); }
+      #projects .project-wrapper .project-container.transformUp {
+        transform: translateY(-100%); }
+    #projects .project-wrapper.initial .project-container {
+      position: relative !important;
+      left: initial !important;
+      top: initial !important;
+      width: initial !important;
+      height: initial !important; }
 
-/*
- * Hide visually and from screen readers, but maintain layout
- */
+#contact {
+  background: linear-gradient(90deg, #48c6ef, #6f86d6); }
 
-.invisible {
-    visibility: hidden;
-}
-
-/*
- * Clearfix: contain floats
- *
- * For modern browsers
- * 1. The space content is one way to avoid an Opera bug when the
- *    `contenteditable` attribute is included anywhere else in the document.
- *    Otherwise it causes space to appear at the top and bottom of elements
- *    that receive the `clearfix` class.
- * 2. The use of `table` rather than `block` is only necessary if using
- *    `:before` to contain the top-margins of child elements.
- */
-
-.clearfix:before,
-.clearfix:after {
-    content: " "; /* 1 */
-    display: table; /* 2 */
-}
-
-.clearfix:after {
-    clear: both;
-}
-
-/* ==========================================================================
-   EXAMPLE Media Queries for Responsive Design.
-   These examples override the primary ('mobile first') styles.
-   Modify as content requires.
-   ========================================================================== */
-
-@media only screen and (min-width: 35em) {
-    /* Style adjustments for viewports that meet the condition */
-}
-
-@media print,
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
-}
-
-/* ==========================================================================
-   Print styles.
-   Inlined to avoid the additional HTTP request:
-   https://www.phpied.com/delay-loading-your-print-css/
-   ========================================================================== */
-
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important; /* Black prints faster */
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-
-    /*
-     * Don't show links that are fragment identifiers,
-     * or use the `javascript:` pseudo protocol
-     */
-
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-
-    pre {
-        white-space: pre-wrap !important;
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-
-    /*
-     * Printing Tables:
-     * http://css-discuss.incutio.com/wiki/Printing_Tables
-     */
-
-    thead {
-        display: table-header-group;
-    }
-
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
-}
+/*# sourceMappingURL=main.css.map */
