--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -73,7 +73,7 @@ section{
     transition: .2s ease-out;
     box-sizing:border-box;
     height: 100%;
-    border: 3px solid #222;
+    border: 1px solid #222;
     perspective: 1000px;
     transform-origin: 100% 100%;
     &:last-of-type{
@@ -89,11 +89,11 @@ section{
       left: 10px;
       bottom: 10px;
       width: 50%;
-      height: 3px;
+      height: 1px;
       background: #222;
       &:last-of-type{
         height: 50%;
-        width: 3px;
+        width: 1px;
         bottom: 10px;
         left: 10px;
       }
@@ -123,43 +123,44 @@ section{
   overflow: hidden;
   animation: gradient 3s ease-in-out infinite alternate;
   .text_note{
-    font-size: 2.42em;
-    max-width: 1280px;
+    font-size: 2em;
+    max-width: 900px;
     position: relative;
     text-align: center;
     color: #222;
     font-weight: 300;
-    &:before, &:after{
-      position: absolute;
-      content: attr(data-note);
-      opacity: .25;
-      top: 0;
-      left: 0;
-      color: #00f;
-      z-index: -2;
-      transform: translate(2.5px, 2.5px);
-    }
-    &:before{
-      transform: translate(-2.7px, -2.1px);
-      z-index: -3;
-      color: #52fc59;
-    }
+    //&:before, &:after{
+    //  position: absolute;
+    //  content: attr(data-note);
+    //  opacity: .25;
+    //  top: 0;
+    //  left: 0;
+    //  color: #00f;
+    //  z-index: -2;
+    //  transform: translate(2.5px, 2.5px);
+    //}
+    //&:before{
+    //  transform: translate(-2.7px, -2.1px);
+    //  z-index: -3;
+    //  color: #52fc59;
+    //}
   }
   #text_container{
     display: flex;
-    height: 110px;
+    height: 75px;
     position: relative;
     font-weight: 300;
-    font-size: 4.2em;
+    font-size: 3.5em;
     justify-content: center;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
     .text_loader{
       position: absolute;
       bottom: .5rem;
       width: 0;
       left: 50%;
-      transform: translateX(-48%);
-      height: 3px;
+      transform: translateX(-50%);
+      height: 1px;
       transition: 230ms width cubic-bezier(0.75, 0, 0, 1);
       background: #222222;
     }
@@ -174,6 +175,7 @@ section{
         width: 50px;
         position: absolute;
         color: #404040;
+        left: 25%;
         box-sizing:border-box;
         //animation: swap .05s ease-out infinite alternate;
         &:first-of-type{
@@ -227,12 +229,12 @@ section{
       will-change: transform, opacity, width, height;
       transition: width 340ms cubic-bezier(0.62, 0.02, 0.34, 1), height 340ms cubic-bezier(0.62, 0.02, 0.34, 1), transform 340ms cubic-bezier(0.62, 0.02, 0.34, 1), left 340ms cubic-bezier(0.62, 0.02, 0.34, 1), top 340ms cubic-bezier(0.62, 0.02, 0.34, 1);
       .project-box{
-        background: white url('https://picsum.photos/410/375') no-repeat top left 0;
+        //background: white url('https://picsum.photos/410/375') no-repeat top left 0;
         cursor: pointer;
+        border: 1px solid #222;
         position: relative;
         width: 100%;
         background-size: auto;
-        border: 1px solid #ececec;
         border-radius: 0;
         box-shadow: 0px 0px 20px -5px rgba(27, 94, 119, 0.15);
         height: 100%;
@@ -249,7 +251,7 @@ section{
           display: flex;
           flex-direction: column;
           justify-content: space-between;
-          align-items: center;
+          align-items: flex-start;
           transition: 250ms ease-out;
           h5{
             font-weight: 400;
@@ -259,7 +261,7 @@ section{
             text-align:center;
           }
           .btn{
-            padding: 5px 10px;
+            padding: 15px 10px;
             text-align:center;
             text-transform: uppercase;
             letter-spacing: .6em;
@@ -272,7 +274,7 @@ section{
             }
             p:not(:first-child){
               position: absolute;
-              top: calc(50% - 15px);
+              top: 50%;
               left: 50%;
               transform: translate(-50%, -50%);
             }
@@ -286,24 +288,12 @@ section{
               border: 1px solid #222;
               transition: inherit;
             }
-            &:hover{
-              letter-spacing: .8em;
-              &:after{
-                transform: scale(1.25);
-              }
-            }
-            &.expanded{
-              letter-spacing: .8em;
-              &:after{
-                transform: scale(1.25);
-              }
-              &:hover{
-                letter-spacing: .6em;
-                &:after{
-                  transform: scale(1);
-                }
-              }
-            }
+            //&:hover{
+            //  letter-spacing: .8em;
+            //  &:after{
+            //    transform: scale(1.25);
+            //  }
+            //}
           }
         }
         &:hover{
@@ -343,12 +333,51 @@ section{
         opacity: 1;
         z-index: 1;
         max-width: 100%;
+        .project-hover{
+          opacity: 1;
+        }
+        //.btn{
+        //  letter-spacing: .8em!important;
+        //  &:after{
+        //    transform: scale(1.25);
+        //  }
+        //  &:hover{
+        //    letter-spacing: .6em!important;
+        //    &:after{
+        //      transform: scale(1) !important;
+        //    }
+        //  }
+        //}
       }
       &.transformDown{
         transform: translateY(100%);
+        &.transformLeft{
+          transform: translate(-100%, 100%);
+          &.double{
+            transform: translate(-200%, 100%);
+          }
+        }
+        &.transformRight{
+          transform: translate(100%, 100%);
+          &.double{
+            transform: translate(200%, 100%);
+          }
+        }
       }
       &.transformUp{
         transform: translateY(-100%);
+        &.transformLeft{
+          transform: translate(-100%, -100%);
+          &.double{
+            transform: translate(-200%, -100%);
+          }
+        }
+        &.transformRight{
+          transform: translate(100%, -100%);
+          &.double{
+            transform: translate(200%, -100%);
+          }
+        }
       }
     }
     &.initial{
@@ -358,6 +387,11 @@ section{
         top: initial!important;
         width: initial!important;
         height: initial!important;
+      }
+    }
+    @include media('<tablet'){
+      .project-container{
+        flex-basis: 50%;
       }
     }
   }
