--- a/src/scss/_partials/_header.scss
+++ b/src/scss/_partials/_header.scss
@@ -5,16 +5,53 @@ nav{
   top: 10px;
   display: flex;
   justify-content: center;
-  padding: 10px;
   z-index: 1;
-  border: 2px solid #222;
+  padding: 0 10px;
+  border: 1px solid #222;
   a{
-    margin: 0 5px;
+    margin: 0;
     color: #222;
+    padding: 10px;
+    position: relative;
     transition: .2s ease-out;
+    text-decoration: none;
+    &:before{
+      transition: .2s ease-out;
+      background: #fff;
+      position: absolute;
+      color: #222;
+      content: attr(data-text);
+      z-index: 2;
+      left: 0;
+      padding: 10px;
+      top: 0;
+      transform: rotateX(0deg);
+    }
+    &:after{
+      transition: .2s ease-out;
+      background: #222;
+      position: absolute;
+      color: #fff;
+      content: attr(data-text);
+      left: 0;
+      padding: 10px;
+      top: 0;
+      z-index: 1;
+      transform: rotateX(180deg);
+    }
     &:hover{
-      color: #111111;
-      text-decoration: none;
+      &:before{
+        background: #D4D4D4;
+      }
+    }
+    &.active{
+      &:before{
+        transform: rotateX(180deg);
+      }
+      &:after{
+        transform: rotateX(0deg);
+        z-index: 4;
+      }
     }
   }
 }
