--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,6 @@
 @import 'plugins/reset';
 @import 'plugins/include-media';
+@import '~vue2-animate/src/sass/vue2-animate';
 
 
 @import '_partials/fonts';
