--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -231,19 +231,21 @@ section{
       will-change: transform, opacity, width, height;
       transition: width 340ms cubic-bezier(0.62, 0.02, 0.34, 1), height 340ms cubic-bezier(0.62, 0.02, 0.34, 1), transform 340ms cubic-bezier(0.62, 0.02, 0.34, 1), left 340ms cubic-bezier(0.62, 0.02, 0.34, 1), top 340ms cubic-bezier(0.62, 0.02, 0.34, 1);
       .project-box{
-        //background: white url('https://picsum.photos/410/375') no-repeat top left 0;
+        background: white url('https://picsum.photos/1920/1080') no-repeat top right 0;
+        overflow: hidden;
         cursor: pointer;
         border: 1px solid #ebebeb;
         position: relative;
         width: 100%;
-        background-size: auto;
+        background-size: cover;
         border-radius: 0;
-        box-shadow: 0px 0px 20px -5px rgba(27, 94, 119, 0.15);
+        //box-shadow: 0 0 20px -5px rgba(27, 94, 119, 0.15);
         height: 100%;
         transition: box-shadow 200ms ease-out;
         .project-hover{
           position: absolute;
           width: 100%;
+          z-index: 3;
           height: 100%;
           //border: 2px solid #222;
           //background: rgba(255,255,255,.5);
@@ -255,8 +257,8 @@ section{
           align-items: flex-start;
           transition: 250ms ease-out;
           h5{
-            font-weight: 400;
-            color: #222;
+            font-weight: 700;
+            color: white;
             padding: 25px;
             font-size: 1.5em;
             margin: 0;
@@ -267,12 +269,13 @@ section{
             padding: 15px 25px;
             text-align: center;
             letter-spacing: .1em;
+            display: inline-block;
             font-size: .85em;
+            color: white;
             position: relative;
             box-sizing: border-box;
-            width: 100%;
-            border-top: 1px solid #ebebeb;
             transition: .2s ease-out;
+            pointer-events: all;
             p:first-child{
               opacity: 0;
             }
@@ -322,7 +325,54 @@ section{
           }
         }
         .project-content{
-          padding: 65px 25px 25px;
+          padding: 65px 75px 25px 25px;
+          box-sizing: border-box;
+          position: relative;
+          height: 100%;
+          opacity: 0;
+          transition: .25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+          transform: translateX(-50%);
+          z-index: 2;
+          transition-delay: 0ms;
+          will-change: transform;
+          background: rgba(255,255,255,1);
+          -webkit-clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
+          clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
+          &:before{
+            content: '';
+            width: 100px;
+            z-index: -1;
+            height: 100%;
+            background: #dcdcdc;
+            position: absolute;
+            right: -25px;
+            top: 0px;
+            transform: skew(-22deg);
+          }
+          &:after{
+            content: '';
+            width: 100px;
+            z-index: -1;
+            height: 100%;
+            background: #e4e4e4;
+            position: absolute;
+            right: -35px;
+            top: 0px;
+            transform: skew(-20deg);
+          }
+          >*{
+            margin: 10px 0;
+          }
+          .date, .tech, .desc{
+            line-height: 24px;
+            &:before{
+              opacity: .5;
+              font-size: .85em;
+            }
+            &:first-of-type{
+              margin-top: 0;
+            }
+          }
           .date{
             &:before{
               content: 'When: ';
@@ -338,19 +388,53 @@ section{
               content: 'What: ';
             }
           }
-          >*{
-            line-height: 24px;
-            &:before{
-              opacity: .5;
+          .btn{
+            display: inline-block;
+            a{
+              padding: 10px 15px;
+              transition: .2s ease-out;
+              background: #222;
+              border-top: 1px solid #222;
+              border-bottom: 1px solid #222;
+              color: white;
+              text-decoration: none;
             }
-            margin: 10px 0;
-            &:first-of-type{
-              margin-top: 0;
+            &:hover{
+              a{
+                background: transparent;
+                color: #222;
+              }
+            }
+          }
+        }
+        .project-controls{
+          position: absolute;
+          bottom: 0;
+          padding: 15px 10px;
+          transition: .2s ease-out;
+          opacity: 0;
+          pointer-events: none;
+          right: 0;
+          span{
+            font-size: .85em;
+            letter-spacing: .1em;
+            color: white;
+            margin-left: 10px;
+            &:before{
+              content: '\2190';
+            }
+            &:last-of-type{
+              &:before{
+                display: none;
+              }
+              &:after{
+                content: '\2192';
+              }
             }
           }
         }
         &:hover{
-          box-shadow: 0px 0px 15px -5px #bbbbbb;
+          //box-shadow: 0px 0px 15px -5px #bbbbbb;
           .project-hover{
             opacity: 1;
           }
@@ -388,6 +472,19 @@ section{
         max-width: 100%;
         .project-hover{
           opacity: 1;
+          pointer-events: none;
+          h5,p{
+            color: #222;
+          }
+        }
+        .project-content{
+          opacity: 1;
+          transition-delay: 250ms;
+          transform: translateX(0);
+        }
+        .project-controls{
+          opacity: 1;
+          pointer-events: all;
         }
         .btn{
           p{
