--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -149,6 +149,7 @@ section{
   }
   #text_container{
     display: flex;
+    font-family: 'flashrogers';
     height: 75px;
     position: relative;
     font-weight: 300;
@@ -228,13 +229,12 @@ section{
       opacity: 1;
       box-sizing:border-box;
       transition-delay: 0ms!important;
-      will-change: transform, opacity, width, height;
-      transition: width 340ms cubic-bezier(0.62, 0.02, 0.34, 1), height 340ms cubic-bezier(0.62, 0.02, 0.34, 1), transform 340ms cubic-bezier(0.62, 0.02, 0.34, 1), left 340ms cubic-bezier(0.62, 0.02, 0.34, 1), top 340ms cubic-bezier(0.62, 0.02, 0.34, 1);
+      //will-change: transform, opacity, width, height;
+      //transition: width 340ms cubic-bezier(0.62, 0.02, 0.34, 1), height 340ms cubic-bezier(0.62, 0.02, 0.34, 1), transform 500ms cubic-bezier(0.62, 0.02, 0.34, 1), left 340ms cubic-bezier(0.62, 0.02, 0.34, 1), top 340ms cubic-bezier(0.62, 0.02, 0.34, 1);
       .project-box{
         background: white url('https://picsum.photos/1920/1080') no-repeat top right 0;
         overflow: hidden;
         cursor: pointer;
-        border: 1px solid #ebebeb;
         position: relative;
         width: 100%;
         background-size: cover;
@@ -257,10 +257,12 @@ section{
           align-items: flex-start;
           transition: 250ms ease-out;
           h5{
+            box-sizing: border-box;
             font-weight: 700;
             color: white;
             padding: 25px;
-            font-size: 1.5em;
+            transition: .2s ease-out;
+            font-size: 1.75em;
             margin: 0;
             text-align:left;
             width: 100%;
@@ -325,43 +327,21 @@ section{
           }
         }
         .project-content{
-          padding: 65px 75px 25px 25px;
+          padding: 75px 75px 25px 25px;
           box-sizing: border-box;
           position: relative;
           height: 100%;
           opacity: 0;
-          transition: .25s cubic-bezier(0.25, 0.46, 0.45, 0.94);
           transform: translateX(-50%);
           z-index: 2;
-          transition-delay: 0ms;
           will-change: transform;
           background: rgba(255,255,255,1);
-          -webkit-clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
-          clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
-          &:before{
-            content: '';
-            width: 100px;
-            z-index: -1;
-            height: 100%;
-            background: #dcdcdc;
-            position: absolute;
-            right: -25px;
-            top: 0px;
-            transform: skew(-22deg);
-          }
-          &:after{
-            content: '';
-            width: 100px;
-            z-index: -1;
-            height: 100%;
-            background: #e4e4e4;
-            position: absolute;
-            right: -35px;
-            top: 0px;
-            transform: skew(-20deg);
-          }
+          //-webkit-clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
+          //clip-path: polygon(0% 0%, 100% 0, 75% 100%, 0% 100%);
           >*{
-            margin: 10px 0;
+            margin: .75em 0;
+            display: flex;
+            flex-direction: column;
           }
           .date, .tech, .desc{
             line-height: 24px;
@@ -440,30 +420,6 @@ section{
           }
         }
       }
-      &:first-of-type{
-        transition-delay: 450ms;
-        //transform: translateX(-20%);
-      }
-      &:nth-of-type(2){
-        transition-delay: 400ms;
-        //transform: translateY(-20%);
-      }
-      &:nth-of-type(3){
-        transition-delay: 250ms;
-        //transform: translateX(20%);
-      }
-      &:nth-of-type(4){
-        transition-delay: 250ms;
-        //transform: translateX(-20%);
-      }
-      &:nth-of-type(5){
-        transition-delay: 400ms;
-        //transform: translateY(20%);
-      }
-      &:nth-of-type(6){
-        transition-delay: 450ms;
-        //transform: translateX(20%);
-      }
       &.active{
         width: 100%;
         height: 100%;
@@ -479,8 +435,8 @@ section{
         }
         .project-content{
           opacity: 1;
-          transition-delay: 250ms;
-          transform: translateX(0);
+          //transition-delay: 250ms;
+          //transform: translateX(0);
         }
         .project-controls{
           opacity: 1;
@@ -521,6 +477,7 @@ section{
         }
       }
       &.transformDown{
+        transition: 340ms transform cubic-bezier(0.7, 0.3, 0, 1);
         transform: translateY(100%);
         &.transformLeft{
           transform: translate(-100%, 100%);
@@ -536,6 +493,7 @@ section{
         }
       }
       &.transformUp{
+        transition: 340ms transform cubic-bezier(0.7, 0.3, 0, 1);
         transform: translateY(-100%);
         &.transformLeft{
           transform: translate(-100%, -100%);
