--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -3,4 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Share Tech Mono');
 @import url('https://fonts.googleapis.com/css?family=Teko:700');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700');
-
+@font-face {
+  font-family: "flashrogers";
+  src: url("../assets/fonts/flashrogersgrad.woff2") format('woff2'),
+      url('../assets/fonts/flashrogersgrad.woff') format('woff');
+}
