--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -46,9 +46,7 @@ section{
   width: 100%;
 }
 .puzzle_container{
-  will-change: transform;
   display: flex;
-  height: 300%;
   flex-direction: column;
 }
 .intro_btn_container{
@@ -68,7 +66,7 @@ section{
     position: absolute;
     box-sizing:border-box;
     height: 100%;
-    border: 1px solid #222;
+    border: 2px solid #222;
     perspective: 1000px;
     transition: .2s ease-in-out;
     will-change: transform;
@@ -86,13 +84,13 @@ section{
       left: 10px;
       bottom: 10px;
       width: 50%;
-      height: 1px;
+      height: 2px;
       background: #222;
       &:last-of-type{
         left: initial;
         right: 12px;
         bottom: 10px;
-        width: 1px;
+        width: 2px;
         height: 50%;
       }
     }
@@ -114,11 +112,7 @@ section{
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  //background: #f7f7f7;
-  //background: linear-gradient(45deg, #fdfbfb, #ebedee);
   height: 100vh;
-  overflow: hidden;
-  animation: gradient 3s ease-in-out infinite alternate;
   .text_note{
     font-size: 2em;
     padding: 10px 15px;
@@ -146,7 +140,7 @@ section{
   }
   #text_container{
     display: flex;
-    font-family: 'flashrogers';
+    //font-family: 'flashrogers';
     height: 75px;
     position: relative;
     font-weight: 300;
@@ -281,61 +275,40 @@ section{
             text-align:left;
             width: 100%;
           }
-          .btn{
-            padding: 15px 25px;
-            text-align: center;
-            letter-spacing: .1em;
-            display: inline-block;
-            font-size: .85em;
-            color: white;
-            position: relative;
-            box-sizing: border-box;
+          .full-screen-btn{
+            position: absolute;
+            right: 25px;
+            top: 16px;
+            width: 36px;
+            height: 32px;
             transition: .2s ease-out;
-            pointer-events: all;
-            p:first-child{
-              opacity: 0;
-            }
-            p:not(:first-child){
-              transition: .2s ease-out;
-              position: absolute;
-              top: 50%;
-              transform: translateY(-50%);
-              //&:before{
-              //  content: '\2190';
-              //}
-              &:before, &:after{
-                content: '\2192';
-                transition: .2s ease-out;
-                right: -20px;
-                position: absolute;
-              }
-              &:before{
-                transform: translateX(-10px);
-                opacity: 0;
-                right: initial;
-                left: -20px;
-              }
-            }
-            &:after{
-              position: absolute;
-              left: 0;
-              top: 0;
-              width: 100%;
-              height: 100%;
-              content: '';
-              transition: inherit;
-            }
+            flex-wrap: wrap;
+            padding: 6px;
+            display: flex;
+            justify-content: space-between;
+            align-items: stretch;
             &:hover{
-              p{
-                transform: translate(20px, -50%);
-                &:after{
-                  transform: translateX(10px);
-                  opacity: 0;
-                }
-                &:before{
-                  transform: translateX(0);
-                  opacity: 1;
-                }
+              transform: scale(1.2);
+            }
+            span{
+              height: 8px;
+              width: 8px;
+              box-sizing: border-box;
+              transition: .2s ease-out;
+              border: 2px solid white;
+              margin: 5px;
+              position: relative;
+              &:first-of-type{
+                border-width: 2px 0 0 2px;
+              }
+              &:nth-of-type(2){
+                border-width: 2px 2px 0 0;
+              }
+              &:nth-of-type(3){
+                border-width: 0 0 2px 2px;
+              }
+              &:last-of-type{
+                border-width: 0 2px 2px 0;
               }
             }
           }
@@ -346,7 +319,7 @@ section{
           position: relative;
           height: 100%;
           opacity: 0;
-          will-change: transform;
+          will-change: transform, opacity;
           transform: translateX(-100%);
           z-index: 2;
           background: rgba(255,255,255,1);
@@ -403,8 +376,13 @@ section{
         }
         .project-controls{
           position: absolute;
-          bottom: 0;
-          padding: 15px 10px;
+          z-index: 5;
+          box-sizing: border-box;
+          bottom: 18px;
+          width:100%;
+          display: flex;
+          justify-content: space-between;
+          padding: 15px 25px;
           transition: .2s ease-out;
           opacity: 0;
           pointer-events: none;
@@ -412,17 +390,22 @@ section{
           span{
             font-size: .85em;
             letter-spacing: .1em;
-            color: white;
-            margin-left: 10px;
+            color: #222;
+            &:before, &:after{
+              padding: 7px;
+              border: 1px solid #222;
+            }
             &:before{
               content: '\2190';
             }
             &.next{
+              color: white;
               &:before{
                 display: none;
               }
               &:after{
                 content: '\2192';
+                border-color: white;
               }
             }
           }
@@ -445,6 +428,15 @@ section{
           pointer-events: none;
           h5,p{
             color: #222;
+          }
+          .full-screen-btn{
+            pointer-events: all;
+            span{
+              transform: rotate(180deg);
+            }
+            &:hover{
+              transform: scale(.8);
+            }
           }
         }
         .project-content{
@@ -488,6 +480,11 @@ section{
           }
         }
       }
+      &:first-of-type{
+        .project-controls{
+          justify-content: flex-end;
+        }
+      }
     }
     &.initial{
       .project-container{
@@ -510,5 +507,6 @@ section{
   }
 }
 #contact{
-  background: linear-gradient(90deg, #48c6ef, #6f86d6);
+  //background: linear-gradient(90deg, #48c6ef, #6f86d6);
+  background: white;
 }
