Set active section on page load * Active section is now being called on page load in case of page being loaded with #id * Removed setBoxValues on goSection which caused wrong size being saved for projects (it's now only being set on page load, needs to add resize event too) * Added will-change css declaration to nav-shadow * Added default value for leftover boxes * Removed some console logs

--- a/src/scss/_partials/_header.scss
+++ b/src/scss/_partials/_header.scss
@@ -18,6 +18,7 @@ nav{
     overflow: hidden;
     font-weight: 700;
     .nav-shadow{
+      will-change: left;
       background: #222;
       position: absolute;
       color: white;
