Mobile project view changed * Added shadow to project logos * Fixed remington logo svg * Changed text on cta btn * Changed cta btn styling to look similar to mobile view * Changed the way letters on intro size themselves (every man on his own!) * Added text shadow on intro text * Changed navigation styling for mobile (now spans across the page) * Removed @click event listener from project-box and project-controls to fix multiple event calls on mobile * Some styling changes to project-content * Added global rowSize and delay variables that depend on window.innerWidth * Removed resizeHandler * Changed include-media breakpoints * Changed ScrollReveal global setting to feature less scaling and more distance

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -65,6 +65,7 @@ h2{
   box-sizing:border-box;
   font-weight: 700;
   color: #222;
+  text-shadow: 5px 5px 0px rgba(0,0,0,.15);
   position: relative;
   @include media('<phone'){
     text-align: center;
