Working on serviceWorker * Added manifest generator :) * Added scroll-reveal to my picture in contact section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import 'plugins/reset';
 @import 'plugins/include-media';
 
-@import '_partials/fonts';
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,700');
 
 @import 'body';
