Refactor * Changed the way projects resize (negative transform scaling to enable animations on mobile) * Removed cantara / added PT41

--- a/src/scss/plugins/_include-media.scss
+++ b/src/scss/plugins/_include-media.scss
@@ -22,7 +22,8 @@
 $breakpoints: (
         'phone': 768px,
         'tablet': 1024px,
-        'desktop': 1200px
+        'desktop': 1200px,
+        'desktopLG': 2000px
 ) !default;
 
 ///
