--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -91,6 +91,9 @@ section{
   margin: 0 auto;
   height: 100%;
   width: 100%;
+  @include media('>desktopLG') {
+    max-width: 1600px;
+  }
 }
 
 .title-wrapper{
