--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -3,7 +3,7 @@ body,html{
   overflow-y: scroll;
   overflow-y: overlay;
   color: #373737;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Space Mono', sans-serif;
   font-size: 1em;
   @include media('<phone'){
     font-size: 14px;
