--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,5 +2,6 @@
 @import 'plugins/include-media';
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,700');
+@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap');
 
 @import 'body';
