--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,7 +1,10 @@
 @import 'plugins/reset';
 @import 'plugins/include-media';
 
-@import url('https://fonts.googleapis.com/css?family=Montserrat:300,700');
-@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Montserrat:300,700');
+//@import url('https://fonts.googleapis.com/css?family=Space+Mono:400,700&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=VT323&display=swap');
+//@import url('https://fonts.googleapis.com/css?family=Nova+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap');
 
 @import 'body';
